# what-token-bridge

./: README.md
docs/: README.md
evm/: Makefile  testing.env
evm/forge-scripts/: deploy_what_token_bridge.sol
evm/forge-test/what_token_brigde/: WhatTokenBrigde.t.sol
evm/shell-scripts/: run_integration_tests.sh
evm/src/what_token_bridge/: WhatTokenBridge.sol  WhatTokenBridgeErrors.sol  WhatTokenBridgeGetters.sol  WhatTokenBridgeMessages.sol  WhatTokenBridgeSetters.sol  WhatTokenBridgeState.sol  WhatTokenBridgeStructs.sol
evm/ts-test/: 00_environment.ts
solana/: Anchor.toml  package.json
solana/programs/what-token-bridge/: Cargo.toml
solana/programs/what-token-bridge/src/: constants.rs  error.rs  helper.rs  lib.rs  message.rs
solana/programs/what-token-bridge/src/instructions/: lock_and_send.rs  mod.rs  redeem_and_unlock.rs
solana/programs/what-token-bridge/src/instructions/admin/: add_whitelists.rs  confirm_ownership_transfer.rs  initialize.rs  mod.rs  register_emitter.rs  remove_whitelists.rs  transfer_ownership.rs  update_config.rs
solana/programs/what-token-bridge/src/state/: config.rs  foreign_emitter.rs  mod.rs  redeem.rs
solana/scripts/: getEmitter.ts  setupBridge.ts  setupToken.ts
solana/scripts/utils/: index.ts
solana/scripts/whatToken/: deploy_what_token.ts  mint_what_token.ts
solana/scripts/whatTokenBridge/: initialize.ts  lock_and_send.ts  redeem_and_unlock.ts  register_emitter.ts
solana/ts/sdk/: what_transfer_token_bridge.ts
solana/ts/sdk/utils/: wormhole.ts
solana/ts/tests/: set_up_environment.ts  what_token_bridge.ts
(+3 files in other folders)
